x86/include/TestFlash.h

typedef unsigned char  uint8;
typedef unsigned short uint16;
typedef unsigned long int uint32;
typedef signed long int int32;
TESTFLASH_API(int32) flOpen(int32 port, int32 xtal, int32 delays, int32 transport);
TESTFLASH_API(int32) flOpenUnlock(int32 port, int32 xtal, int32 delays,
                                  int32 transport, const char* unlockKey);
TESTFLASH_API(int32) flmOpenUnlock(uint32 deviceMask, int32 xtal,
                                   int32 transport, const char* unlockKey);
TESTFLASH_API(int32) flOpenTrans(const char* trans, int32 xtal, int32 delays);
TESTFLASH_API(int32) flOpenUnlockTrans(const char* trans, int32 xtal,
                                       int32 delays, const char* unlockKey);
TESTFLASH_API(int32) flmOpenUnlockTrans(uint32 deviceMask, const char* trans,
                                        int32 xtal, const char* unlockKey);
TESTFLASH_API(int32) flReadProgramFiles(const char* fileName);
TESTFLASH_API(int32) flProgramBlock(void);
TESTFLASH_API(int32) flErase(void);
TESTFLASH_API(int32) flGangProgramBlock(uint16 deviceMask, uint8 eraseFirst,
                                        uint8 restartAfter, uint8 skipUnused);
TESTFLASH_API(uint16) flGetBitErrorField(void);
TESTFLASH_API(int32) flProgramSpawn(void);
TESTFLASH_API(int32) flGangProgramSpawn(uint16 deviceMask, uint8 eraseFirst,
                                        uint8 restartAfter, uint8 skipUnused);
TESTFLASH_API(int32) flGetProgress(void);
TESTFLASH_API(int32) flGetLastError(void);
TESTFLASH_API(int32) flResetAndStart(void);
TESTFLASH_API(void) flClose(void);
TESTFLASH_API(int32) flGetVersion(char* versionStr);
TESTFLASH_API(int32) flGetAvailablePorts(uint16* maxLen, char* ports, char* trans,
                                         uint16* count);
TESTFLASH_API(int32) flmGetAvailablePorts(uint16* maxLen, char* ports, char* trans,
                                          uint16* count);
TESTFLASH_API(int32) flmConvertPort(const char* transIn, char* transOut,
                                    uint32* device);
TESTFLASH_API(int32) flVerify(void);
TESTFLASH_API(int32) flmVerifyBlock(uint32 deviceMask, uint8 restartAfter);
TESTFLASH_API(int32) flmVerifySpawn(uint32 deviceMask, uint8 restartAfter);
TESTFLASH_API(int32) flGetFlashInfo(uint16* sectors, uint16* sizeMbits,
                                    uint32* manId, uint32* devId);
TESTFLASH_API(int32) flmGetDeviceFlashInfo(uint32 device, uint16* sectors,
                                           uint16* sizeMbits, uint32* manId,
                                           uint32* devId);
TESTFLASH_API(int32) flGetFlashInfoEx(uint32* sectors, uint32* sizeMbits,
                                      uint32* manId, uint32* devId);
TESTFLASH_API(int32) flmGetDeviceFlashInfoEx(uint32 device, uint32* sectors,
                                           uint32* sizeMbits, uint32* manId,
                                           uint32* devId);
TESTFLASH_API(int32) flSetFlashType(uint8 type);
TESTFLASH_API(int32) flmSetFlashType(uint32 deviceMask, uint8 type);
TESTFLASH_API(int32) flSetPios(uint8 pioSclk, uint8 pioMiso, uint8 reserved);
TESTFLASH_API(int32) flmSetPios(uint32 deviceMask, uint8 pioSclk, uint8 pioMiso,
                                uint8 reserved);
TESTFLASH_API(int32) flSetSubsysChipSel(uint8 subSys, uint8 chipSel);
TESTFLASH_API(int32) flmSetSubsysChipSel(uint32 deviceMask, uint8 subSys, uint8 chipSel);
TESTFLASH_API(int32) flSetSqifAccess(const char* fileName);
TESTFLASH_API(int32) flmSetSqifAccess(uint32 deviceMask, const char* fileName);
TESTFLASH_API(int32) flSetSecurityKey(const char* keyValOrFileName);
TESTFLASH_API(int32) flmSetSecurityKey(uint32 deviceMask, 
                                       const char* keyValOrFileName);
TESTFLASH_API(int32) flEnableSecurity(uint32 options);
TESTFLASH_API(int32) flmEnableSecurity(uint32 deviceMask, uint32 options);
TESTFLASH_API(uint16) flGetChipId(void);
TESTFLASH_API(uint16) flmGetChipId(uint32 device);
#define init_flash               flOpen
#define read_program_files       flReadProgramFiles
#define program_flash_block      flProgramBlock
#define erase_flash              flErase
#define gang_program_flash_block flGangProgramBlock
#define get_bit_error_field      flGetBitErrorField
#define program_flash_spawn      flProgramSpawn
#define gang_program_flash_spawn flGangProgramSpawn
#define get_spawned_progress     flGetProgress
#define get_spawned_error        flGetLastError
#define reset_and_start          flResetAndStart
#define close_flash              flClose
#define get_version              flGetVersion
#define flGetAvailableSpiPorts   flGetAvailablePorts
#define flmGetAvailableSpiPorts  flmGetAvailablePorts
#define flInit                   flOpen
#define flInitTrans              flOpenTrans
#define flInitSpiUnlock          flOpenUnlock
#define flInitSpiUnlockTrans     flOpenUnlockTrans
#define flmOpenSpiUnlock         flmOpenUnlock
#define flmOpenSpiUnlockTrans    flmOpenUnlockTrans
#define flSetSubsysBank          flSetSubsysChipSel
#define flmConvertSpiPort        flmConvertPort
#define flmSetSubsysBank         flmSetSubsysChipSel