x86/include/TestFlashAPI_05.vb

    End Function
    <DllImport("TestFlash.dll", EntryPoint:="flVerify", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function flVerify () As Integer
    End Function
    <DllImport("TestFlash.dll", EntryPoint:="flmVerifyBlock", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function flmVerifyBlock (ByVal deviceMask As UInteger, ByVal restartAfter As Byte) As Integer
    End Function
    <DllImport("TestFlash.dll", EntryPoint:="flmVerifySpawn", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function flmVerifySpawn (ByVal deviceMask As UInteger, ByVal restartAfter As Byte) As Integer
    End Function
    <DllImport("TestFlash.dll", EntryPoint:="flGetFlashInfo", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function flGetFlashInfo (ByRef sectors As UShort, ByRef sizeMbits As UShort, ByRef manId As UInteger, ByRef devId As UInteger) As Integer
    End Function
    <DllImport("TestFlash.dll", EntryPoint:="flmGetDeviceFlashInfo", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function flmGetDeviceFlashInfo (ByVal device As UInteger, ByRef sectors As UShort, ByRef sizeMbits As UShort, ByRef manId As UInteger, ByRef devId As UInteger) As Integer
    End Function
    <DllImport("TestFlash.dll", EntryPoint:="flGetFlashInfoEx", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function flGetFlashInfoEx (ByRef sectors As UInteger, ByRef sizeMbits As UInteger, ByRef manId As UInteger, ByRef devId As UInteger) As Integer
    End Function
    <DllImport("TestFlash.dll", EntryPoint:="flmGetDeviceFlashInfoEx", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function flmGetDeviceFlashInfoEx (ByVal device As UInteger, ByRef sectors As UInteger, ByRef sizeMbits As UInteger, ByRef manId As UInteger, ByRef devId As UInteger) As Integer
    End Function
    <DllImport("TestFlash.dll", EntryPoint:="flSetFlashType", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function flSetFlashType (ByVal aType As Byte) As Integer
    End Function
    <DllImport("TestFlash.dll", EntryPoint:="flmSetFlashType", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function flmSetFlashType (ByVal deviceMask As UInteger, ByVal aType As Byte) As Integer
    End Function
    <DllImport("TestFlash.dll", EntryPoint:="flSetPios", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function flSetPios (ByVal pioSclk As Byte, ByVal pioMiso As Byte, ByVal reserved As Byte) As Integer
    End Function
    <DllImport("TestFlash.dll", EntryPoint:="flmSetPios", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function flmSetPios (ByVal deviceMask As UInteger, ByVal pioSclk As Byte, ByVal pioMiso As Byte, ByVal reserved As Byte) As Integer
    End Function
    <DllImport("TestFlash.dll", EntryPoint:="flSetSubsysChipSel", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function flSetSubsysChipSel (ByVal subSys As Byte, ByVal chipSel As Byte) As Integer
    End Function
    <DllImport("TestFlash.dll", EntryPoint:="flmSetSubsysChipSel", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function flmSetSubsysChipSel (ByVal deviceMask As UInteger, ByVal subSys As Byte, ByVal chipSel As Byte) As Integer
    End Function
    <DllImport("TestFlash.dll", EntryPoint:="flSetSqifAccess", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function flSetSqifAccess (ByVal fileName As String) As Integer
    End Function
    <DllImport("TestFlash.dll", EntryPoint:="flmSetSqifAccess", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function flmSetSqifAccess (ByVal deviceMask As UInteger, ByVal fileName As String) As Integer
    End Function
    <DllImport("TestFlash.dll", EntryPoint:="flSetSecurityKey", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function flSetSecurityKey (ByVal keyValOrFileName As String) As Integer
    End Function
    <DllImport("TestFlash.dll", EntryPoint:="flmSetSecurityKey", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function flmSetSecurityKey (ByVal deviceMask As UInteger, ByVal keyValOrFileName As String) As Integer
    End Function
    <DllImport("TestFlash.dll", EntryPoint:="flEnableSecurity", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function flEnableSecurity (ByVal options As UInteger) As Integer
    End Function
    <DllImport("TestFlash.dll", EntryPoint:="flmEnableSecurity", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function flmEnableSecurity (ByVal deviceMask As UInteger, ByVal options As UInteger) As Integer
    End Function
    <DllImport("TestFlash.dll", EntryPoint:="flGetChipId", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function flGetChipId () As UShort
    End Function
    <DllImport("TestFlash.dll", EntryPoint:="flmGetChipId", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function flmGetChipId (ByVal device As UInteger) As UShort
    End Function
    <DllImport("TestFlash.dll", EntryPoint:="open_ps", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function open_ps (ByVal port As Integer, ByVal device As Integer) As Integer
    End Function
    <DllImport("TestFlash.dll", EntryPoint:="close_ps", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function close_ps () As Integer
    End Function
    <DllImport("TestFlash.dll", EntryPoint:="set_stores", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Sub set_stores (ByVal store As UShort)
    End Sub
    <DllImport("TestFlash.dll", EntryPoint:="write_ps", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function write_ps (ByVal key As UShort, ByVal data() As UShort, ByVal keyLen As UShort) As Integer
    End Function
    <DllImport("TestFlash.dll", EntryPoint:="write_ps_verify", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function write_ps_verify (ByVal key As UShort, ByVal data() As UShort, ByVal keyLen As UShort) As Integer
    End Function
    <DllImport("TestFlash.dll", EntryPoint:="read_ps", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function read_ps (ByVal key As UShort, ByVal data() As UShort, ByVal maxlen As UShort, ByRef keyLen As UShort) As Integer
    End Function
    <DllImport("TestFlash.dll", EntryPoint:="clear_ps", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function clear_ps (ByVal key As UShort) As Integer
    End Function
    <DllImport("TestFlash.dll", EntryPoint:="factory_set", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function factory_set () As Integer
    End Function
    <DllImport("TestFlash.dll", EntryPoint:="e2_device", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function e2_device (ByVal log2bytes As UShort, ByVal addrmask As UShort) As Integer
    End Function
    <DllImport("TestFlash.dll", EntryPoint:="get_firmware_id", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function get_firmware_id (ByRef id As Integer, ByVal nameBuffer() As UShort, ByVal length As UInteger) As Integer
    End Function

' DEPRECATED FUNCTIONS
Declare Function init_flash Lib "TestFlash.dll" Alias "flOpen" (ByVal port As Integer, ByVal xtal As Integer, ByVal delays As Integer, ByVal transport As Integer) As Integer
Declare Function read_program_files Lib "TestFlash.dll" Alias "flReadProgramFiles" (ByVal fileName As String) As Integer
Declare Function program_flash_block Lib "TestFlash.dll" Alias "flProgramBlock" () As Integer
Declare Function erase_flash Lib "TestFlash.dll" Alias "flErase" () As Integer
Declare Function gang_program_flash_block Lib "TestFlash.dll" Alias "flGangProgramBlock" (ByVal deviceMask As UShort, ByVal eraseFirst As Byte, ByVal restartAfter As Byte, ByVal skipUnused As Byte) As Integer
Declare Function get_bit_error_field Lib "TestFlash.dll" Alias "flGetBitErrorField" () As UShort
Declare Function program_flash_spawn Lib "TestFlash.dll" Alias "flProgramSpawn" () As Integer
Declare Function gang_program_flash_spawn Lib "TestFlash.dll" Alias "flGangProgramSpawn" (ByVal deviceMask As UShort, ByVal eraseFirst As Byte, ByVal restartAfter As Byte, ByVal skipUnused As Byte) As Integer
Declare Function get_spawned_progress Lib "TestFlash.dll" Alias "flGetProgress" () As Integer
Declare Function get_spawned_error Lib "TestFlash.dll" Alias "flGetLastError" () As Integer
Declare Function reset_and_start Lib "TestFlash.dll" Alias "flResetAndStart" () As Integer
Declare Sub close_flash Lib "TestFlash.dll" Alias "flClose" ()
Declare Function get_version Lib "TestFlash.dll" Alias "flGetVersion" (ByVal versionStr As StringBuilder) As Integer
Declare Function flGetAvailableSpiPorts Lib "TestFlash.dll" Alias "flGetAvailablePorts" (ByRef maxLen As UShort, ByVal ports As StringBuilder, ByVal trans As StringBuilder, ByRef count As UShort) As Integer
Declare Function flmGetAvailableSpiPorts Lib "TestFlash.dll" Alias "flmGetAvailablePorts" (ByRef maxLen As UShort, ByVal ports As StringBuilder, ByVal trans As StringBuilder, ByRef count As UShort) As Integer
Declare Function flInit Lib "TestFlash.dll" Alias "flOpen" (ByVal port As Integer, ByVal xtal As Integer, ByVal delays As Integer, ByVal transport As Integer) As Integer
Declare Function flInitTrans Lib "TestFlash.dll" Alias "flOpenTrans" (ByVal trans As String, ByVal xtal As Integer, ByVal delays As Integer) As Integer
Declare Function flInitSpiUnlock Lib "TestFlash.dll" Alias "flOpenUnlock" (ByVal port As Integer, ByVal xtal As Integer, ByVal delays As Integer, ByVal transport As Integer, ByVal unlockKey As String) As Integer
Declare Function flInitSpiUnlockTrans Lib "TestFlash.dll" Alias "flOpenUnlockTrans" (ByVal trans As String, ByVal xtal As Integer, ByVal delays As Integer, ByVal unlockKey As String) As Integer
Declare Function flmOpenSpiUnlock Lib "TestFlash.dll" Alias "flmOpenUnlock" (ByVal deviceMask As UInteger, ByVal xtal As Integer, ByVal transport As Integer, ByVal unlockKey As String) As Integer
Declare Function flmOpenSpiUnlockTrans Lib "TestFlash.dll" Alias "flmOpenUnlockTrans" (ByVal deviceMask As UInteger, ByVal trans As String, ByVal xtal As Integer, ByVal unlockKey As String) As Integer
Declare Function flSetSubsysBank Lib "TestFlash.dll" Alias "flSetSubsysChipSel" (ByVal subSys As Byte, ByVal chipSel As Byte) As Integer
Declare Function flmConvertSpiPort Lib "TestFlash.dll" Alias "flmConvertPort" (ByVal transIn As String, ByVal transOut As StringBuilder, ByRef device As UInteger) As Integer
Declare Function flmSetSubsysBank Lib "TestFlash.dll" Alias "flmSetSubsysChipSel" (ByVal deviceMask As UInteger, ByVal subSys As Byte, ByVal chipSel As Byte) As Integer
End Module


